Fix FileUploader overflow
CU-8694jm9wp

--- a/nextgisweb/file_upload/nodepkg/file-uploader/FileUploader.less
+++ b/nextgisweb/file_upload/nodepkg/file-uploader/FileUploader.less
@@ -1,13 +1,12 @@
 .ngw-file-upload-file-uploader > .ant-upload.ant-upload-drag {
     border: none;
-    padding: 12px;
 
     > span.ant-upload-btn {
         display: flex;
         justify-content: center;
+        overflow: hidden;
         align-items: center;
         border: 3px dashed var(--divider-color);
-        padding: 12px;
 
         > .ant-upload-drag-container {
             display: block;
